fix: form submisson fail

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -11,11 +11,11 @@
       <form method="POST" action="/new">
         <p>
           <label for="message-user">Name: </label
-          ><input type="text" name="message-user" id="message-user" required />
+          ><input type="text" name="messageUser" id="message-user" required />
         </p>
         <p>
           <label for="message">Message: </label
-          ><textarea name="message-text" id="message-text" required></textarea>
+          ><textarea name="messageText" id="message-text" required></textarea>
         </p>
         <button type="submit">Submit</button>
       </form>
