feat: implement database support

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -10,8 +10,8 @@
       <h1><%= title %></h1>
       <form method="POST" action="/new">
         <p>
-          <label for="message-user">Name: </label
-          ><input type="text" name="messageUser" id="message-user" required />
+          <label for="message-author">Name: </label
+          ><input type="text" name="messageAuthor" id="message-author" required />
         </p>
         <p>
           <label for="message">Message: </label
